Scary Main Commit + QoL + Index

--- a/src/components/Artistcard.astro
+++ b/src/components/Artistcard.astro
@@ -59,7 +59,7 @@ const props = Astro.props as Props;
   .country,
   .genre,
   .icon {
-    background: black;
+    background: transparent;
     width: fit-content;
     padding: 0.3rem 0.5rem;
   }
