--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -32,13 +32,13 @@
   * {
     margin: 0;
     box-sizing: border-box;
-    font-family: Montserrat, Helvicta, sans-serif;
+    font-family: var(--font-main);
   }
 
   .text-wrapper {
     display: flex;
     justify-content: flex-start;
-    background-color: #a3cafd;
+    background-color: var(--colour-base);
     overflow: hidden;
   }
 
