--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ import Ticketbutton from "./Ticketbutton.astro";
 
   nav {
     display: flex;
-    height: 100px;
+    height: 6.25rem;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -45,11 +45,11 @@ import Ticketbutton from "./Ticketbutton.astro";
   }
   .watermark {
     position: absolute;
-    height: 100px;
+    height: 6.25rem;
   }
 
   .logo {
-    margin: 20px;
+    margin: 1.25rem;
     display: flex;
     align-items: center;
   }
@@ -59,15 +59,15 @@ import Ticketbutton from "./Ticketbutton.astro";
   }
   p {
     color: var(--colour-text);
-    margin-left: 10px;
-    font-size: 20px;
-    font-family: Dance;
+    margin-left: 0.625rem;
+    font-size: 1.25rem;
+    font-family: var(--font-head);
     letter-spacing: 1px;
   }
   li {
     list-style: none;
     /* text-transform: uppercase; */
-    font-family: Dance;
+    font-family: var(--font-head);
     letter-spacing: 1px;
   }
   ul {
@@ -78,8 +78,8 @@ import Ticketbutton from "./Ticketbutton.astro";
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100px;
-    width: 120px;
+    height: 6.25rem;
+    width: 7.5rem;
     background-color: transparent;
   }
 
@@ -92,7 +92,7 @@ import Ticketbutton from "./Ticketbutton.astro";
   }
 
   .com {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0.625rem;
+    padding-right: 0.625rem;
   }
 </style>
