--- a/src/components/Normalbutton.Astro
+++ b/src/components/Normalbutton.Astro
@@ -9,30 +9,30 @@ const { variant } = Astro.props;
 
 <style>
   .primary {
-    width: 270px;
+    width: 16.875rem;
     border-style: solid;
     border-width: 1px;
     border-color: #fff8ee;
-    padding: 17px 21px 17px 21px;
+    padding: 1rem 1.3rem 1rem 1.3rem;
     background-color: transparent;
-    color: #fff8ee;
+    color: var(--colour-text);
   }
   .primary:hover {
-    background-color: #c86b25;
-    border-color: #c86b25;
+    background-color: var(--colour-accent);
+    border-color: var(--colour-accent);
   }
   .secondary {
     /* border: 1px solid #c86b25; */
-    width: 120px;
+    width: 7.5rem;
     border-style: solid;
     border-width: 1px;
-    border-color: #c86b25;
-    padding: 17px 21px 17px 21px;
+    border-color: var(--colour-accent);
+    padding: 1rem 1.3rem 1rem 1.3rem;
     background-color: transparent;
-    color: #fff8ee;
+    color: var(--colour-text);
   }
   .secondary:hover {
-    background-color: #c86b25;
+    background-color: var(--colour-accent);
   }
 
   @media (max-width: 600px) {
