--- a/src/components/Ticketbutton.astro
+++ b/src/components/Ticketbutton.astro
@@ -8,18 +8,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 17px 21px 17px 21px;
-    background-color: #c86b25;
-    color: #fff8ee;
+    padding: 1rem 1.3rem 1rem 1.3rem;
+    background-color: var(--colour-accent);
+    color: var(--colour-text);
     border: none;
     /* border-radius: 5%; */
-    height: 30px;
-    width: 100px;
-    margin-right: 20px;
-    font-size: 18px;
-    font-family: Montserrat;
+    height: 2.5rem;
+    width: 10rem;
+    margin-right: 1.25rem;
+    font-size: 1.125rem;
+    font-family: var(--font-main);
+    transition: transform 0.25s;
+    border-radius: 0.5rem;
+    box-shadow: 1px 1px black;
   }
   button:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 </style>
