--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -66,7 +66,7 @@
     justify-content: center;
   }
   .socials img {
-    height: 40px;
+    height: 2.5rem;
   }
   .kune {
     display: flex;
@@ -74,7 +74,7 @@
     justify-content: center;
   }
   .kune img {
-    height: 60px;
+    height: 3.75rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
