More Variables + Rems

--- a/src/components/Stagebutton.astro
+++ b/src/components/Stagebutton.astro
@@ -14,10 +14,10 @@ const stagetype = Astro.props.stagetype;
     display: flex;
   }
   #icon {
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
     align-self: center;
-    margin-right: 10px;
+    margin-right: 0.625rem;
   }
   #stagename {
     align-self: center;
