--- a/src/components/Volunteerform.astro
+++ b/src/components/Volunteerform.astro
@@ -32,7 +32,7 @@ import Normalbutton from "./Normalbutton.astro";
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #28292cc9;
+    background: var(--colour-background) 9;
     margin: auto;
   }
 
