--- a/src/components/Aboutvolunteerbutton.astro
+++ b/src/components/Aboutvolunteerbutton.astro
@@ -10,7 +10,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: var(--colour-text);
-    padding: 17px 21px 17px 21px;
+    padding: 1rem 1.3rem 1rem 1.3rem;
     background-color: transparent;
     color: var(--colour-text);
   }
