--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -47,7 +47,7 @@
     font-size: 1rem;
     font-weight: 700;
     text-transform: uppercase;
-    color: #282323;
+    color: var(--colour-background);
     white-space: nowrap;
     padding: 0;
     margin: 0.5rem;
