--- a/src/components/Normalbutton.Astro
+++ b/src/components/Normalbutton.Astro
@@ -12,7 +12,7 @@ const { variant } = Astro.props;
     width: 16.875rem;
     border-style: solid;
     border-width: 1px;
-    border-color: #fff8ee;
+    border-color: var(--colour-text);
     padding: 1rem 1.3rem 1rem 1.3rem;
     background-color: transparent;
     color: var(--colour-text);
@@ -37,10 +37,10 @@ const { variant } = Astro.props;
 
   @media (max-width: 600px) {
     .primary {
-      padding: 11px 21px 11px 21px;
+      padding: 0.7rem 1.3rem 0.7rem 1.3rem;
     }
     .secondary {
-      padding: 11px 21px 11px 21px;
+      padding: 0.7rem 1.3rem 0.7rem 1.3rem;
     }
   }
 </style>
