maybe last commit

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,19 +10,16 @@ import Ticketbutton from "./Ticketbutton.astro";
     </div>
     <div class="navlinks">
       <ul>
-        <div class="navbut"><li><a href="lineup.astro">Lineup</a></li></div>
+        <div class="navbut"><li><a href="/lineup">Lineup</a></li></div>
         <div class="navbut">
-          <li><a href="community.astro">Community</a></li>
+          <li><a href="/community">Community</a></li>
         </div>
         <div class="navbut"><li><a href="">Info</a></li></div>
       </ul>
     </div>
     <Ticketbutton />
-    <!-- <img class="watermark" src="/svglogo/watermark.svg" alt="" /> -->
   </nav>
 </header>
-
-<!-- <script src="../script/"></script> -->
 
 <style>
   * {
