--- a/src/components/Aboutvolunteerbutton.astro
+++ b/src/components/Aboutvolunteerbutton.astro
@@ -1,7 +1,8 @@
 ---
+const id = Astro.props.id;
 ---
 
-<button>
+<button id={id}>
   <slot />
 </button>
 
@@ -15,6 +16,10 @@
     color: var(--colour-text);
   }
   button:hover {
+    background-color: var(--colour-text);
+    color: var(--colour-background);
+  }
+  .button_active {
     background-color: var(--colour-text);
     color: var(--colour-background);
   }
