header-rettet-main

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,6 +29,8 @@ import Ticketbutton from "./Ticketbutton.astro";
   }
   header {
     position: relative;
+    background-color: var(--colour-background);
+    z-index: 0;
   }
 
   .hbg {
