--- a/src/pages/lineup.astro
+++ b/src/pages/lineup.astro
@@ -2,6 +2,10 @@
 import { createClient } from "@supabase/supabase-js";
 import Artistcard from "../components/Artistcard.astro";
 import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import Normalbutton from "../components/Normalbutton.astro";
+import Stagebutton from "../components/Stagebutton.astro";
+import Ticketbutton from "../components/Ticketbutton.astro";
 import "../style/style.css";
 
 const supabaseUrl = "https://lknjocuybcipxwdjwhuf.supabase.co";
@@ -20,18 +24,37 @@ let { data } = await supabase.from("Kune_artist").select("*");
     <title>Astro</title>
   </head>
   <body>
-    <main id="content">
-      {
-        (data || []).map(({ name, country, stageimage, genre, image }) => (
-          <Artistcard
-            name={name}
-            country={country}
-            icon={stageimage}
-            genre={genre}
-            bg={image}
-          />
-        ))
-      }
+    <Header />
+    <main>
+      <section id="header_lineup">
+        <h1>LINE UP</h1>
+      </section>
+      <div id="container_program" class="knapper">
+        <Normalbutton variant="primary">SEE PROGRAM</Normalbutton>
+      </div>
+      <h2>MUSIC</h2>
+      <h3>STAGES</h3>
+
+      <div id="container_stages" class="stages">
+        <Stagebutton stagetype="vessel">Vessel</Stagebutton>
+        <Stagebutton stagetype="space">Space</Stagebutton>
+        <Stagebutton stagetype="astral">Astral</Stagebutton>
+        <Stagebutton stagetype="beach">Beach</Stagebutton>
+        <Stagebutton stagetype="amphi">Amphi</Stagebutton>
+      </div>
+      <div id="content">
+        {
+          (data || []).map(({ name, country, stageimage, genre, image }) => (
+            <Artistcard
+              name={name}
+              country={country}
+              icon={stageimage}
+              genre={genre}
+              bg={image}
+            />
+          ))
+        }
+      </div>
     </main>
 
     <Footer />
@@ -50,5 +73,38 @@ let { data } = await supabase.from("Kune_artist").select("*");
     justify-content: center;
     max-width: 1300px;
     margin: 0 auto;
+  }
+  #header_lineup {
+    background-image: url("../images/Lineup_image.webp");
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    display: grid;
+    justify-content: center;
+    align-content: space-evenly;
+  }
+
+  h1 {
+    font-family: var(--font-head);
+    font-size: 5rem;
+    align-self: end;
+    color: var(--colour-text);
+    text-shadow: 0.25rem 0.25rem black;
+  }
+
+  #container_program {
+    display: flex;
+    justify-content: center;
+  }
+  h2,
+  h3 {
+    text-align: center;
+    line-height: 1.688rem;
+  }
+
+  .stages {
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
   }
 </style>
