Burger menu done

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,17 +9,19 @@ import Ticketbutton from "./Ticketbutton.astro";
       <a href="/"><img src="/svglogo/hvidlogo.svg" alt="logo" /></a>
       <p>KUNE <br />Festival</p>
     </div>
- 
-    <div >
+    <div class="main-menu">
+      <button class="toggle-btn"></button>
       <ul class="nav-links">
-        <div class="navbut"><li><a href="lineup.astro">Lineup</a></li></div>
+        <!-- <li><Ticketbutton id="mobile_ticket" /></li> -->
+        <div class="navbut" id="mobile_ticket"><li><a href="/"><strong>Tickets</strong></a></li></div>
+        <div class="navbut"><li><a href="lineup.astro"><strong>Lineup</strong></a></li></div>
         <div class="navbut">
-          <li><a href="community.astro">Community</a></li>
+          <li><a href="community.astro"><strong>Community</strong></a></li>
         </div>
-        <div class="navbut"><li><a href="">Info</a></li></div>
+        <div class="navbut"><li><a href=""><strong>Info</strong></a></li></div>
       </ul>
     </div>
-    <Ticketbutton />
+    <Ticketbutton id="standard_ticket" />
   </nav>
 </header>
 
@@ -47,7 +49,6 @@ import Ticketbutton from "./Ticketbutton.astro";
     inset: 0;
     height: auto;
     z-index: -1;
-   
   }
 
   nav {
@@ -106,7 +107,73 @@ import Ticketbutton from "./Ticketbutton.astro";
     padding-right: 0.625rem;
   }
   /* ___________ Burgermenu ____________ */
+  #mobile_ticket {
+    display: none;
+  }
+  .toggle-btn {
+    background-image: url("/icons/burgermenu.svg");
+    border: none;
+    min-width: 44px;
+    min-height: 44px;
+    font-size: 1.1rem;
+    cursor: pointer;
 
+    display: none; /* Skjul knappen som standard */
+  }
+  .close_toggle-btn {
+    background-image: url("/icons/kryds.svg");
+  }
 
+  @media (max-width: 600px) {
+    .toggle-btn {
+      display: block; /* Vis knappen, når viewporten maksimalt er 600px */
+      margin-left: 86%;
+      margin-bottom: 6%;
+    }
+    #mobile_ticket {
+      display: inherit;
+    }
+    #standard_ticket {
+      display: none;
+    }
 
+    /* .main-menu {
+      display: contents;  */
+    /* Fjern ".main-menu"-boksen fra ligningen, når viewporten maksimalt er 600px, men behold børnene, så disse deltager i flex-kontekten */
+    /* } */
+
+    .main-menu ul {
+      display: none; /* Fjern menu-listen som standard */
+    }
+
+    .main-menu.shown ul {
+      /* Vis menu-listen, når klassen ".shown" er til stede */
+      border-top: 1px solid #000;
+      padding-top: 1rem;
+      display: flex;
+      /* flex: 1 1 100%; */
+      flex-flow: column;
+      background-color: var(--colour-accent);
+      color: var(--colour-text);
+      justify-content: center;
+    }
+    .navbut {
+      align-self: center;
+    }
+
+    .navbut li {
+      font-family: var(--font-head);
+      font-size: 30px;
+    }
+    .navbut li:hover a {
+      color: var(--colour-background);
+    }
+    .main-menu {
+      z-index: 1;
+      position: absolute;
+      left: 0;
+      top: 29px;
+      width: 100%;
+    }
+  }
 </style>
