--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,28 +3,20 @@
 
 <div class="text-wrapper">
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now •
+    tickets are out now
   </h2>
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now •
+    tickets are out now
   </h2>
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now •
+    tickets are out now
   </h2>
   <h2>
-    • tickets are out now • tickets are out now • tickets are out now • tickets
-    are out now • tickets are out now • tickets are out now • tickets are out
-    now • tickets are out now • tickets are out now • tickets are out now •
-    tickets are out now • tickets are out now
+    • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now • tickets are out now •
+    tickets are out now
   </h2>
 </div>
 
@@ -40,6 +32,7 @@
     justify-content: flex-start;
     background-color: var(--colour-base);
     overflow: hidden;
+    z-index: -1;
   }
 
   h2 {
