--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,84 +41,86 @@ import "../style/style.css";
         </div>
       </div>
     </div>
-
-    <style>
-      body {
-        background-color: var(--colour-background);
-        background-image: url(../images/Landingpage_image.webp);
-        background-repeat: no-repeat;
-        background-size: cover;
-        object-fit: cover;
-        z-index: -1;
-      }
-
-      h1 {
-        font-size: 7rem;
-        font-family: var(--font-head);
-        letter-spacing: 0.6rem;
-        text-align: center;
-        text-shadow: 4px 4px black;
-      }
-      .front-hero {
-        display: flex;
-        justify-content: center;
-        color: var(--colour-text);
-      }
-
-      .front-countdown h2 {
-        display: flex;
-        justify-content: center;
-        color: var(--colour-accent);
-        font-size: 3rem;
-        text-shadow: 2px 2px black;
-      }
-
-      .front-button {
-        display: flex;
-        justify-content: center;
-      }
-
-      .front-text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        flex-grow: 1;
-        margin-top: -6rem;
-      }
-
-      .front-page {
-        display: flex;
-        position: relative;
-        flex-direction: column;
-        min-height: 100vh;
-      }
-
-      .front-socials {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0.5rem;
-      }
-
-      .front-socials a {
-        transform: scale(0.95);
-        transition: transform 0.5s;
-      }
-
-      .front-socials a:hover {
-        transform: scale(1);
-      }
-
-      .front-copyright {
-        position: absolute;
-        bottom: 1rem;
-        right: 1rem;
-      }
-    </style>
+    <script src="../java/burgermenu.js"></script>
   </body>
 </html>
+
+<style>
+  body {
+    background-color: var(--colour-background);
+    background-image: url(../images/Landingpage_image.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    z-index: -1;
+  }
+
+  h1 {
+    font-size: 7rem;
+    font-family: var(--font-head);
+    letter-spacing: 0.6rem;
+    text-align: center;
+    text-shadow: 4px 4px black;
+  }
+  .front-hero {
+    display: flex;
+    justify-content: center;
+    color: var(--colour-text);
+  }
+
+  .front-countdown h2 {
+    display: flex;
+    justify-content: center;
+    color: var(--colour-accent);
+    font-size: 3rem;
+    text-shadow: 2px 2px black;
+  }
+
+  .front-button {
+    display: flex;
+    justify-content: center;
+  }
+
+  .front-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    flex-grow: 1;
+    margin-top: -6rem;
+  }
+
+  .front-page {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  .front-socials {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0.5rem;
+    z-index: -1;
+  }
+
+  .front-socials a {
+    transform: scale(0.95);
+    transition: transform 0.5s;
+  }
+
+  .front-socials a:hover {
+    transform: scale(1);
+  }
+
+  .front-copyright {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+  }
+</style>
