Nav button changes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,11 +14,11 @@ import Ticketbutton from "./Ticketbutton.astro";
       <ul class="nav-links">
         <!-- <li><Ticketbutton id="mobile_ticket" /></li> -->
         <div class="navbut" id="mobile_ticket"><li><a href="/"><strong>Tickets</strong></a></li></div>
-        <div class="navbut"><li><a href="lineup.astro"><strong>Lineup</strong></a></li></div>
+        <div class="navbut"><li><a href="/lineup"><strong>Lineup</strong></a></li></div>
         <div class="navbut">
-          <li><a href="community.astro"><strong>Community</strong></a></li>
+          <li><a href="/community"><strong>Community</strong></a></li>
         </div>
-        <div class="navbut"><li><a href=""><strong>Info</strong></a></li></div>
+        <div class="navbut"><li><a href="/"><strong>Info</strong></a></li></div>
       </ul>
     </div>
     <Ticketbutton id="standard_ticket" />
