--- a/src/pages/community.astro
+++ b/src/pages/community.astro
@@ -98,6 +98,7 @@ import Volunteerform from "../components/Volunteerform.astro";
   </main>
   <Footer />
   <script src="../js/community.js"></script>
+  <script src="../java/burgermenu.js"></script>
 </Metahead>
 
 <style>
