--- a/src/pages/lineup.astro
+++ b/src/pages/lineup.astro
@@ -32,7 +32,7 @@ let { data } = await supabase.from("Kune_artist").select("*");
       <div id="container_program" class="knapper">
         <Normalbutton variant="primary">SEE PROGRAM</Normalbutton>
       </div>
-      <h2>MUSIC</h2>
+      <h2><strong>MUSIC</strong></h2>
       <h3>STAGES</h3>
 
       <div id="container_stages" class="stages">
@@ -95,16 +95,45 @@ let { data } = await supabase.from("Kune_artist").select("*");
   #container_program {
     display: flex;
     justify-content: center;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
   }
-  h2,
+
+  #container_stages {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    margin-bottom: 1.5rem;
+    padding-left: 26.5rem;
+    padding-right: 26.5rem;
+  }
+  h2 {
+    text-align: center;
+    margin-top: 1.688rem;
+    margin-bottom: 1.688rem;
+    font-size: 25px;
+  }
+
   h3 {
     text-align: center;
-    line-height: 1.688rem;
+    margin-top: 1.688rem;
+    margin-bottom: 1.688rem;
   }
 
   .stages {
-    width: 600px;
+    /* width: 600px; */
     display: flex;
     justify-content: space-between;
+  }
+
+  @media (max-width: 600px) {
+    #container_stages {
+      display: flex;
+      padding: 4px;
+      margin: 0;
+      margin-bottom: 1.5rem;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 </style>
